--- a/great-idea/services.html
+++ b/great-idea/services.html
@@ -31,10 +31,10 @@
 <img class="services-header-img" src="img/services-header.jpg" alt="Our services header image">
 
 <section class="services">
-  <div class="heading">
+  <span class="heading">
     <h1>Services</h1>
     <p>Our services provide the best digital value in nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque eleifend. Mauris euismod facilisis iaculis.</p>
-  </div>
+  </span>
 
   <div>
     <h3>Digital Design</h3>
@@ -93,23 +93,24 @@
     <a href="">Learn More</a>
   </div>
 
-  <div class="some-fax">
+  <span class="some-fax">
     <h3>Some Facts About Our Services</h3>
 
     <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
 eleifend. Mauris euismod facilisis iaculis.</p>
-  </div>
+  </span>
 </section>
 
+
+
+<nav class="thing-links">
+  <a href="">Awesome thing</a>
+  <a href="">Amazing thing</a>
+  <a href="">Cool thing</a>
+  <a href="">Great thing</a>
+</nav>
+
 <footer class="serv-footer">
-
-<ul>
-<li>Awesome thing</li>
-<li>Amazing thing</li>
-<li>Cool thing</li>
-<li>Great thing</li>
-</ul>
-
 <img class="services-info-img" src="img/services-info.png" alt="one of our employees hard at work">
 
 <p>Copyright Great Idea! 2018</p>
